--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,4 +8,10 @@
     <item android:id="@+id/delete_selfies"
         android:title="delete all selfies"
         app:showAsAction="never" />
+    <item android:id="@+id/cancel_alarm"
+        android:title="cancel alarms"
+        app:showAsAction="never"/>
+    <item android:id="@+id/resume_alarm"
+        android:title="resume alarms"
+        app:showAsAction="never"/>
 </menu>
