--- a/app/src/main/res/menu/cab_menu.xml
+++ b/app/src/main/res/menu/cab_menu.xml
@@ -1,8 +1,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-<item android:id="@+id/cab_delete"
-    android:title="delete selected items"
-    app:showAsAction="always"
-    />
+    <item android:id="@+id/cab_delete"
+        android:title="delete selected items"
+        app:showAsAction="ifRoom"
+        />
+    <item android:id="@+id/cab_show_selfies"
+        android:title="show selfie array"
+        app:showAsAction="ifRoom"
+        />
+    <item android:id="@+id/cab_show_adapter"
+        android:title="show adapter"
+        app:showAsAction="ifRoom"
+        />
 </menu>
