--- a/app/src/main/res/layout/photo_entry.xml
+++ b/app/src/main/res/layout/photo_entry.xml
@@ -33,13 +33,26 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="xxxxxxxxxxxxxxxxxxxxxxxx"
         android:id="@+id/photoDate"
         android:layout_alignParentTop="false"
-        android:layout_toEndOf="@+id/thumbNailRoot"
-        android:gravity="center_vertical|center_horizontal"
-        android:textSize="36sp"
+        android:gravity="center_vertical|left"
+        android:textSize="18sp"
         android:layout_toRightOf="@+id/thumbNailRoot"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="10dp" />
+        android:layout_marginLeft="10dp"
+        android:background="@android:color/transparent"
+        android:layout_centerVertical="true"
+        android:ellipsize="end"
+        android:maxLines="1" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/contextMenu"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:scaleType="center"
+        android:padding="0dp"
+        android:src="@drawable/ic_action_overflow"
+        android:clickable="true" />
 </RelativeLayout>
