--- a/app/src/main/res/layout/photo_entry.xml
+++ b/app/src/main/res/layout/photo_entry.xml
@@ -45,7 +45,7 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:visibility="visible"
-        android:clickable="true"/>
+        android:clickable="false"/>
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,6 +62,8 @@
         android:maxLines="1"
         android:clickable="false"
         android:focusable="true"
+        android:imeOptions="actionGo"
+        android:inputType="text"
         android:visibility="gone"/>
     <ImageView
         android:layout_width="wrap_content"
