rename confirmation dialog added

--- a/app/src/main/res/layout/photo_entry.xml
+++ b/app/src/main/res/layout/photo_entry.xml
@@ -62,7 +62,7 @@
         android:maxLines="1"
         android:clickable="false"
         android:focusable="true"
-        android:imeOptions="actionGo"
+        android:imeOptions="actionDone"
         android:inputType="text"
         android:visibility="gone"/>
     <ImageView
