--- a/app/src/main/res/layout/photo_entry.xml
+++ b/app/src/main/res/layout/photo_entry.xml
@@ -60,10 +60,12 @@
         android:layout_centerVertical="true"
         android:ellipsize="end"
         android:maxLines="1"
+        android:singleLine="true"
         android:clickable="false"
         android:focusable="true"
-        android:imeOptions="actionDone"
-        android:inputType="text"
+        android:imeActionId="@+id/my_DONE_ID"
+        android:imeActionLabel="Done"
+        android:inputType="textNoSuggestions"
         android:visibility="gone"/>
     <ImageView
         android:layout_width="wrap_content"
