--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -6,6 +6,9 @@
     <item android:id="@+id/rename_selfie"
         android:title="rename"
         />
+    <item android:id="@+id/reset_self_name"
+        android:title="reset name"
+        />
     <item android:id="@+id/email_selfie"
         android:title="send"
         />
